<?xml version="1.0"?>
<package format="3">
  <name>led_msgs</name>
  <version>0.0.13</version>
  <description>Messages for LEDs and LED strips</description>

  <maintainer email="db@droneblocks.io">Dennis Baldwin</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/DroneBlocks/ros_led</url>

  <author email="db@droneblocks.io">Dennis Baldwin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
