<?xml version="1.0"?>
<package format="3">
  <name>ws281x</name>
  <version>0.0.13</version>
  <description>ROS node for rpi_ws281x LED strip driver</description>
  <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
  <license>MIT</license>
  <license>BSD</license>

  <url type="website">https://github.com/CopterExpress/ros_led</url>

  <author email="sfalexrog@gmail.com">Alexey Rogachevskiy</author>
  <author email="okalachev@gmail.com">Oleg Kalachev</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>ros_environment</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>led_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
